[gd_scene load_steps=42 format=2]

[ext_resource path="res://characters/FUGUM/FUGUM.gd" type="Script" id=1]
[ext_resource path="res://characters/FUGUM/sprites/diggerBase.png" type="Texture" id=2]
[ext_resource path="res://characters/FUGUM/sprites/diggerBlade.png" type="Texture" id=3]
[ext_resource path="res://characters/FUGUM/sprites/flag/flag_05.png" type="Texture" id=4]
[ext_resource path="res://characters/FUGUM/sprites/flag/flag_06.png" type="Texture" id=5]
[ext_resource path="res://characters/FUGUM/sprites/flag/flag_07.png" type="Texture" id=6]
[ext_resource path="res://characters/FUGUM/sprites/flag/flag_08.png" type="Texture" id=7]
[ext_resource path="res://characters/FUGUM/sprites/flag/flag_09.png" type="Texture" id=8]
[ext_resource path="res://characters/FUGUM/sprites/flag/flag_01.png" type="Texture" id=9]
[ext_resource path="res://characters/FUGUM/sprites/flag/flag_04.png" type="Texture" id=10]
[ext_resource path="res://characters/FUGUM/sprites/flag/flag_02.png" type="Texture" id=11]
[ext_resource path="res://characters/FUGUM/sprites/flag/flag_03.png" type="Texture" id=12]
[ext_resource path="res://characters/FUGUM/sprites/flag/flag_10.png" type="Texture" id=13]
[ext_resource path="res://characters/FUGUM/sounds/blade.mp3" type="AudioStream" id=14]
[ext_resource path="res://characters/FUGUM/sounds/idle.mp3" type="AudioStream" id=15]
[ext_resource path="res://characters/FUGUM/sounds/release.wav" type="AudioStream" id=16]
[ext_resource path="res://characters/FUGUM/sounds/moving.mp3" type="AudioStream" id=17]

[sub_resource type="CircleShape2D" id=1]
radius = 216.0

[sub_resource type="Animation" id=37]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpinSound:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=22]
resource_name = "spin"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "spin"

[sub_resource type="AnimationNodeTimeScale" id=24]

[sub_resource type="AnimationNodeBlendTree" id=25]
nodes/Animation/node = SubResource( 26 )
nodes/Animation/position = Vector2( 110, 90 )
nodes/TimeScale/node = SubResource( 24 )
nodes/TimeScale/position = Vector2( 400, 80 )
nodes/output/position = Vector2( 650, 90 )
node_connections = [ "output", 0, "TimeScale", "TimeScale", 0, "Animation" ]

[sub_resource type="Animation" id=27]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Spinner/SpinnerTree:parameters/TimeScale/scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpinSound:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -80.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpinSound:pitch_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}

[sub_resource type="Animation" id=28]
resource_name = "start"
tracks/0/type = "value"
tracks/0/path = NodePath("Spinner/SpinnerTree:parameters/TimeScale/scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpinSound:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -80.0, -5.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpinSound:pitch_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.5, 2.0 ]
}

[sub_resource type="Animation" id=29]
resource_name = "stop"
tracks/0/type = "value"
tracks/0/path = NodePath("Spinner/SpinnerTree:parameters/TimeScale/scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpinSound:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -5.0, -80.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpinSound:pitch_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 2.0, 0.5 ]
}

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "RESET"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "start"

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "stop"

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachine" id=33]
states/RESET/node = SubResource( 35 )
states/RESET/position = Vector2( 106.5, 74 )
states/start/node = SubResource( 30 )
states/start/position = Vector2( 286.5, 110.25 )
states/stop/node = SubResource( 31 )
states/stop/position = Vector2( 511.5, 111 )
transitions = [ "start", "stop", SubResource( 32 ), "RESET", "start", SubResource( 36 ), "stop", "start", SubResource( 39 ) ]
start_node = "RESET"

[sub_resource type="AnimationNodeStateMachinePlayback" id=34]

[sub_resource type="CircleShape2D" id=18]
radius = 16.0

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 10 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 13 ) ],
"loop": true,
"name": "wave",
"speed": 10.0
} ]

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Idle:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -80.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Moving:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -80.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Idle:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Release:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Moving:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Release:volume_db")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -5.0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "idle"
step = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Idle:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -30.0, -10.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Moving:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -10.0, -80.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Idle:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Moving:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=38]
resource_name = "leave"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("Moving:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -5.0, -5.0, -80.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Moving:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=12]
resource_name = "moving"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Moving:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -30.0, -5.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Idle:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -5.0, -80.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Moving:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Idle:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=10]
resource_name = "stop"
tracks/0/type = "value"
tracks/0/path = NodePath("Idle:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -40.0, -5.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Moving:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -5.0, -80.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Idle:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="FUGUM" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="WheelCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -456, 136 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Base" type="Sprite" parent="."]
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Wheel" type="Sprite" parent="."]
position = Vector2( -456, 136 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Voice" type="AudioStreamPlayer2D" parent="Wheel"]
volume_db = 10.0

[node name="SpinSound" type="AudioStreamPlayer2D" parent="Wheel"]
stream = ExtResource( 14 )
volume_db = -80.0
pitch_scale = 0.5
autoplay = true

[node name="Spinner" type="AnimationPlayer" parent="Wheel"]
anims/RESET = SubResource( 37 )
anims/spin = SubResource( 22 )

[node name="SpinnerTree" type="AnimationTree" parent="Wheel/Spinner"]
tree_root = SubResource( 25 )
anim_player = NodePath("..")
parameters/TimeScale/scale = 1.0

[node name="Timing" type="AnimationPlayer" parent="Wheel"]
anims/RESET = SubResource( 27 )
anims/start = SubResource( 28 )
anims/stop = SubResource( 29 )

[node name="TimingTree" type="AnimationTree" parent="Wheel/Timing"]
tree_root = SubResource( 33 )
anim_player = NodePath("..")
active = true
parameters/playback = SubResource( 34 )

[node name="AtRot0" type="Area2D" parent="Wheel"]
position = Vector2( 0, -200 )
collision_layer = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wheel/AtRot0"]
shape = SubResource( 18 )

[node name="AtRot90" type="Area2D" parent="Wheel"]
position = Vector2( 200, -16 )
collision_layer = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wheel/AtRot90"]
shape = SubResource( 18 )

[node name="AtRot180" type="Area2D" parent="Wheel"]
position = Vector2( 16, 200 )
collision_layer = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wheel/AtRot180"]
shape = SubResource( 18 )

[node name="AtRot270" type="Area2D" parent="Wheel"]
position = Vector2( -208, 0 )
collision_layer = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wheel/AtRot270"]
shape = SubResource( 18 )

[node name="Flag" type="AnimatedSprite" parent="."]
position = Vector2( -48, -80 )
frames = SubResource( 5 )
animation = "wave"
frame = 8
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="Idle" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -160, 64 )
stream = ExtResource( 15 )
volume_db = -80.0

[node name="Release" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -160, 64 )
stream = ExtResource( 16 )
volume_db = -5.0

[node name="Moving" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -160, 64 )
stream = ExtResource( 17 )
volume_db = -80.0

[node name="SoundBlender" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 7 )
anims/idle = SubResource( 11 )
anims/leave = SubResource( 38 )
anims/moving = SubResource( 12 )
anims/stop = SubResource( 10 )

[node name="Tween" type="Tween" parent="."]

[connection signal="area_entered" from="Wheel/AtRot0" to="." method="_on_AtRot0_area_entered"]
[connection signal="area_entered" from="Wheel/AtRot90" to="." method="_on_AtRot90_area_entered"]
[connection signal="area_entered" from="Wheel/AtRot180" to="." method="_on_AtRot180_area_entered"]
[connection signal="area_entered" from="Wheel/AtRot270" to="." method="_on_AtRot270_area_entered"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
